--- a/ex004/index.html
+++ b/ex004/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio das mensagens</title>
+    <title>Outra formatações</title>
 </head>
 <body>
-    <h1>Desafio das Mensagens</h1>
-    <hr>
-    <p>*Um</p>
-    <p>**Dois</p>
-    <p>***Três</p>
-    <p>****Quatro</p>
-    <br>
-    <p>****Quatro</p>
-    <p>***Treê</p>
-    <p>**Dois</p>
-    <p>* Um</p>
+    <h1>Principais formatações</h1>
+    <h2>Negrito / Destaque</h2>
+    <p>Nesta frase temos um <b>termo em negrito</b> usando a tag B (não semântica).</p>
+    <p>Nesta frase temos um <strong>termo em destaque</strong> usando a tag STRONG (semântica).</p>
+    <h2>Itálico / Ênfase</h2>
+    <p>Nesta frase temos um <i>termo em itálico</i> usando a tag I (não semântica).</p>
+    <p>Nesta frase temos um <em>termo em ênfase</em> usando a tag EM (semântica).</p>
+    <h2>Texto marcado</h2>
+    <p>Podemos criar um <mark>texto marcado</mark> com a tag MARK</p>
+    <h2>Texto deletado</h2>
+    <p>Podemos considerar um <del>texto com excluído</del> para indicar que ele deve ser lido, mas não considerado</p>
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar um <ins>texto com inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois</p>
 </body>
 </html>
